# re-constraint

./: .gitignore  README.md  re-constraint.cabal
src/: GRegexp.hs  Translate.hs  TranslateString.hs
