name:                re-constraint
version:             0.1.0.0
-- synopsis:
description:	     Please see the README on Github at <https://github.com/peterthiemann/re-constraint#readme>
homepage:            https://github.com/githubuser/re-constraint#readme
license:             BSD3
license-file:        LICENSE
author:         Peter Thiemann
maintainer:     peter.thiemann@gmail.com
copyright:      2018 Peter Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable re-constraint-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
       base >= 4.7 && < 5
       , z3 >= 4.3
